--- a/index.html
+++ b/index.html
@@ -77,13 +77,12 @@
         </section>
 
         <section id="formulario" class="formulario">
-            <form id="form" class="topBefore" action="https://formsubmit.co/eddyrm.93@gmail.com" method="post">
-                <input id="name" type="text" name= "name" placeholder="NAME">
-                <input id="email" type="text" name = "email" placeholder="E-MAIL">
-                <input id="dieta" type="text" name = "dieta"placeholder="¿Tienes alguna alergia?">
-                <input id="alergia" type="text" name ="alergia" placeholder="E-MAIL">
-                <textarea id="cancion" type="text" name ="alergia" placeholder="MESSAGE"></textarea>
-                <input id="submit" type="submit" name ="submit" value="GO!" >
+            <form id="form" class="topBefore" action="https://formsubmit.co/martadiez93@hotmail.com" method="post">
+                <input id="Nombre" type="text" name= "Nombre" placeholder="NAME">
+                <input id="Dieta" type="text" name = "Dieta"placeholder="¿Tienes alguna alergia?">
+                <input id="Alergias" type="text" name ="Alergias" placeholder="E-MAIL">
+                <textarea id="Cancion" type="text" name ="Cancion" placeholder="MESSAGE"></textarea>
+                <input id="submit" type="submit" name ="submit" value="Enviar" >
             </form>
         </section>
             
