--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 
         <section id="formulario" class="formulario">
             <form id="form" class="topBefore" action="https://formsubmit.co/martadiez93@hotmail.com" method="post">
-                <input id="Nombre" type="text" name= "Nombre" placeholder="NAME">
-                <input id="Dieta" type="text" name = "Dieta"placeholder="¿Tienes alguna alergia?">
-                <input id="Alergias" type="text" name ="Alergias" placeholder="E-MAIL">
-                <textarea id="Cancion" type="text" name ="Cancion" placeholder="MESSAGE"></textarea>
+                <input id="Nombre" type="text" name= "Nombre" placeholder="Nombre">
+                <input id="Dieta" type="text" name = "Dieta"placeholder="¿Que tipo de dieta prefieres?">
+                <input id="Alergias" type="text" name ="Alergias" placeholder="¿Tienes alguna alergia o intolerancia a algún alimento?">
+                <textarea id="Cancion" type="text" name ="Cancion" placeholder="¿Qué canción te recuerda a nosotros?"></textarea>
                 <input id="submit" type="submit" name ="submit" value="Enviar" >
             </form>
         </section>
