--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section id="slider" class="historia">
             <div class="historiadescripcion"><br>"The greatest thing you'll ever learn is just to love and be love in return"</div>
             <br></br>
-            <div class="historiatexto">ca LA SONRISA Y EL AMOR QUE SENTIMOS DESDE EL PRINCIPIO, NOS ACOMPAÑE A TODOS EL DÍA DE NUESTRA BODA </div>
+            <div class="historiatexto">QUE LA SONRISA Y EL AMOR QUE SENTIMOS DESDE EL PRINCIPIO, NOS ACOMPAÑE A TODOS EL DÍA DE NUESTRA BODA </div>
         </section>
         <section class="ism-slider" data-transition_type="fade" data-play_type="once" data-radio_type="thumbnail" id="my-slider">
             <ol>
