Submit button changes
Changed the submit button from input to button, to solve iOS compatibility problems.

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <textarea id="Cancion" type="text" name ="Cancion" placeholder="Ej: Gasolina - Daddy Yankee"></textarea>
                 <label for="Dieta">¿A qué dirección quieres que enviemos la invitación?</label>
                 <textarea id="Direccion" type="text" name="Direccion" placeholder="Direccion"></textarea>
-                <input id="submit" type="submit" name ="submit" value="Enviar">
+                <button class="enviar" type="submit">Enviar</button>
                 
         
             </form>
