--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Marta y Tarás</title>
+        <title>8/7/22 Marta y Tarás</title>
         <link rel="stylesheet" href="assets/css/web.css"> 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,7 +30,7 @@
                 <li><a href="#fechas">Fecha</a></li>
                 <li><a href="#formulario">Asistencia</a></li> 
             </ul> 
-            <div id="titulo" class="titulo"><h4>T&nbsp; A&nbsp; R &nbsp;A &nbsp;S  &nbsp;&nbsp;&nbsp; & &nbsp;&nbsp;&nbsp; M&nbsp; A &nbsp;R &nbsp;T&nbsp; A</h4></div>
+            <div id="titulo" class="titulo"><h4>T&nbsp; A&nbsp; R &nbsp;A &nbsp;S  &nbsp;&nbsp;&nbsp; & &nbsp;&nbsp;&nbsp; M&nbsp; A &nbsp;R &nbsp;T&nbsp; A<br>5/11/22</h4></div>
           </section>
     </header>
 
@@ -43,25 +43,25 @@
         <section class="ism-slider" data-transition_type="fade" data-play_type="once" data-radio_type="thumbnail" id="my-slider">
             <ol>
               <li>
-                <a href="https://ibb.co/WWRKV5X"><img src="https://i.ibb.co/HD9gh4y/DSC-0286.jpg" alt="DSC-0286"/></a>
+                <img src="https://i.ibb.co/HD9gh4y/DSC-0286.jpg" alt="DSC-0286"/></a>
               </li>
               <li>
-                <a href="https://ibb.co/zf39Y3q"><img src="https://i.ibb.co/Hgcwsc5/IMG-0282-Facetune-28-03-2022-18-02-12.jpg" alt="IMG-0282-Facetune-28-03-2022-18-02-12"/></a>      
+                <img src="https://i.ibb.co/Hgcwsc5/IMG-0282-Facetune-28-03-2022-18-02-12.jpg" alt="IMG-0282-Facetune-28-03-2022-18-02-12"/></a>      
               </li>
               <li>
-                <a href="https://ibb.co/3yCvKYk"><img src="https://i.ibb.co/SX3cS7J/IMG-0287-Facetune-28-03-2022-18-04-38.jpg" alt="IMG-0287-Facetune-28-03-2022-18-04-38"/></a>
+                <img src="https://i.ibb.co/SX3cS7J/IMG-0287-Facetune-28-03-2022-18-04-38.jpg" alt="IMG-0287-Facetune-28-03-2022-18-04-38"/></a>
               </li>
               <li>
-                <a href="https://ibb.co/HXVsbc2"><img src="https://i.ibb.co/jHT2QC5/DSC-0229.jpg" alt="DSC-0229"/></a>
+                <img src="https://i.ibb.co/jHT2QC5/DSC-0229.jpg" alt="DSC-0229"/></a>
               </li>
               <li>
-                <a href="https://ibb.co/3sHs6ZH"><img src="https://i.ibb.co/hMvMQzv/DSC-0189.jpg" alt="DSC-0189"/></a>
+                <img src="https://i.ibb.co/hMvMQzv/DSC-0189.jpg" alt="DSC-0189"/></a>
               </li>
               <li>
-                <a href="https://ibb.co/H2zVgHW"><img src="https://i.ibb.co/wLWR6z9/DSC-0196.jpg" alt="DSC-0196"/></a>
+                <img src="https://i.ibb.co/wLWR6z9/DSC-0196.jpg" alt="DSC-0196"/></a>
               </li>
               <li>
-                <a href="https://ibb.co/HVGyYpH"><img src="https://i.ibb.co/t4Y6cPJ/DSC-0249.jpg" alt="DSC-0249"/></a>
+                <img src="https://i.ibb.co/t4Y6cPJ/DSC-0249.jpg" alt="DSC-0249"/></a>
               </li>
             </ol>
           </section>
