Fecha cambiada de sitio

--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
                 <li><a href="#fechas">Fecha</a></li>
                 <li><a href="#formulario">Asistencia</a></li> 
             </ul> 
-            <div id="titulo" class="titulo"><h4>T&nbsp; A&nbsp; R &nbsp;A &nbsp;S  &nbsp;&nbsp;&nbsp; & &nbsp;&nbsp;&nbsp; M&nbsp; A &nbsp;R &nbsp;T&nbsp; A<br>5/11/22</h4></div>
+            <div id="titulo" class="titulo"><h4>T&nbsp; A&nbsp; R &nbsp;A &nbsp;S  &nbsp;&nbsp;&nbsp; & &nbsp;&nbsp;&nbsp; M&nbsp; A &nbsp;R &nbsp;T&nbsp; A</h4></div>
           </section>
     </header>
 
     <body>
         <section id="slider" class="historia">
+            <div class="casamos">¡NOS CASAMOS!<br>5/11/22</div>
             <div class="historiadescripcion"><br>"The greatest thing you'll ever learn is just to love and be love in return"</div>
             <br></br>
             <div class="historiatexto">QUE LA SONRISA Y EL AMOR QUE SENTIMOS DESDE EL PRINCIPIO, NOS ACOMPAÑE A TODOS EL DÍA DE NUESTRA BODA </div>
