--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         <section id="formulario" class="formulario">
             <h1>¿QUIERES ACOMPAÑARNOS EN NUESTRO VIAJE?</h1>
-            <form id="form" class="topBefore" action="https://formsubmit.co/eddyrm.93@gmail.com" method="post">
+            <form id="form" class="topBefore" action="https://formsubmit.co/martadiez93@hotmail.com" method="post">
                 <label for="Dieta">Nombre y apellidos</label>
                 <input id="Nombre" type="text" name= "Nombre" placeholder="Ej: Marta Diez Gutiérrez"></input>
                 <label for="Dieta">¿Qué tipo de dieta prefieres?</label>
