--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
         <section id="fechas" class="boda">
             <div id="texto">NUESTRO ENLACE</div>
             <div id="donde">
-                <div id="lugar"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3197.6359708520595!2d-4.414047984484795!3d36.731303079274234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd72f7c5c00680a7%3A0xd950cd7613bfe82c!2sCapilla%20del%20Calvario%2C%20C.%20Amargura%2C%2041%2C%2029012%20M%C3%A1laga!5e0!3m2!1ses!2ses!4v1645907245004!5m2!1ses!2ses" width="300" height="150" style="border:10px;" allowfullscreen="" loading="lazy"></iframe></div> 
+                <a id="lugar">Iglesia de Santiago Apóstol
+                <div id="mapaboda"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12792.039461785334!2d-4.4176066!3d36.7223243!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xca2def585c7490dc!2sParroquia%20Santiago%20Ap%C3%B3stol%20M%C3%A1laga!5e0!3m2!1ses!2ses!4v1666885398768!5m2!1ses!2ses" width="300" height="150" style="border:10px;" allowfullscreen="" loading="lazy"></iframe></div>    
+                </a>
                 <div id="linea"></div>
-                <div id="hora"><br>
-                  <a id="ermita">Ermita el Monte Calvario</a>
-                  17:00</div>
+                <div id="hora"><br>16:30</div>
                 </div>
             </div>
         </section>
@@ -82,11 +82,11 @@
         <section  class="convite">
             <div id="texto">CELEBRACIÓN</div>
             <div id="donde">
-                <div id="lugar"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3200.720782596341!2d-4.4982710847141165!3d36.657167279978275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd72fa347d5c25f7%3A0x15a4f8eb59f47f4b!2sCortijo%20la%20Casita%20de%20Madera!5e0!3m2!1ses!2ses!4v1652094054008!5m2!1ses!2ses" width="300" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+                <a id="lugar">La Casita de Madera (Churriana)
+                <div id="mapaboda"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d51183.93801680483!2d-4.722123291015628!3d36.69863098606702!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd72e804384ce2ef%3A0xa9e0f87bbfe0f570!2zQ2FsbGUgbGEgQ2FycmV0YSwgMSwgMjkxMDAgQ2_DrW4sIE3DoWxhZ2EsIEVzcGHDsWE!5e0!3m2!1ses!2sus!4v1645908681261!5m2!1ses!2sus" width="300" height="150" style="border:10px;" allowfullscreen="" loading="lazy"></iframe></div>    
+                </a>
                 <div id="linea"></div>
-                <div id="hora"><br>
-                  <a id="casita">La Casita de Madera (Churriana)</a>
-                  19:00</div>
+                <div id="hora"><br>19:00</div>
                 </div>
             </div>
         </section>
