--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div id="texto">CELEBRACIÓN</div>
             <div id="donde">
                 
-                <div id="mapaboda"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d51183.93801680483!2d-4.722123291015628!3d36.69863098606702!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd72e804384ce2ef%3A0xa9e0f87bbfe0f570!2zQ2FsbGUgbGEgQ2FycmV0YSwgMSwgMjkxMDAgQ2_DrW4sIE3DoWxhZ2EsIEVzcGHDsWE!5e0!3m2!1ses!2sus!4v1645908681261!5m2!1ses!2sus" width="300" height="150" style="border:10px;" allowfullscreen="" loading="lazy"></iframe></div>    
+                <div id="mapaboda"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12802.88312705582!2d-4.4960824!3d36.6571673!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x15a4f8eb59f47f4b!2sCortijo%20la%20Casita%20de%20Madera!5e0!3m2!1ses!2ses!4v1666888897888!5m2!1ses!2ses" width="300" height="150" style="border:10px;" allowfullscreen="" loading="lazy"></iframe></div>    
                 </a>
                 <div id="linea"></div>
                 <br>
