--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </a>
                 <div id="linea"></div>
                 <br>
-                <a id="lugar"><br><br>La Casita de Madera (Churriana)
+                <a id="lugar"><br><br>La Casita de Madera
                   <div id="hora">19:00</div>
                 </div>
             </div>
